fix spacing issue in grid format of horror movies

--- a/src/components/HorrorMovies.css
+++ b/src/components/HorrorMovies.css
@@ -1,10 +1,13 @@
 .movies-main-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    column-gap: 10px;
-    row-gap: 20px;
-    width: 100%;
-    overflow: hidden;
-    
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+    grid-auto-rows: 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    justify-items: center;
+    width: 100vw;
+ 
 }
+
+
 
